--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -10,6 +10,8 @@
 \usepackage{tabularx}
 \usepackage{lscape}
 \usepackage{verbatim}
+\bibliography{bachproef-tin}
+
 %%---------- Documenteigenschappen ---------------------------------------------
 % TODO: Vul dit aan met je eigen info:
 
@@ -132,5 +134,6 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 %%---------- Referentielijst --------------------------------------------------
 
 \printbibliography[heading=bibintoc]
+
 
 \end{document}
